myapp-deployment-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nodejs-poc-deployment
  labels:
    app: app-nodejs-poc
spec:
  replicas: 1
  revisionHistoryLimit: 0 # Default to 10 if not specified
  selector:
    matchLabels:
      app: app-nodejs-poc
  template:
    metadata:
      labels:
        app: app-nodejs-poc
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext: {}
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      containers:
      - name: app-nodejs-poc
        image: kyndryl.jfrog.io/uki-business-intelligence-prod-docker-local/app-nodejs-poc:latest
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 32m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        imagePullPolicy: Always
        terminationMessagePolicy: File
