myapp-pod.yml
apiVersion: apps/v1
kind: Pod
metadata:
  name: app-nodejs-poc
  spec:
  containers:
  - name: app-nodejs-poc
    image: kyndryl.jfrog.io/uki-business-intelligence-test-docker-local/app-nodejs-poc:latest
    resources:
      limits:
        cpu: 500m
        memory: 512Mi
      requests:
        cpu: 32m
        memory: 128Mi
    terminationMessagePath: /dev/termination-log
    ports:
    - name: http
      containerPort: 8080
      protocol: TCP
    imagePullPolicy: Always
    terminationMessagePolicy: File
