myapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-nodejs-poc-svc
  labels:
    app: app-nodejs-poc
spec:
  type: ClusterIP
  selector:
    app: app-nodejs-poc-deployment
  ports:
  - name: app-nodejs-poc-svc-port
    port: 8080
    protocol: TCP
    targetPort: 8080
