myapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
  - host: kpes-dev.zkpw3uspriv.app.kyndryl.net
    http:
      paths:
      - path: /app-1
        pathType: Prefix
        backend:
          service:
            name: app-nodejs-poc-svc
            port:
              number: 8080
      - path: /app-2
        pathType: Prefix
        backend:
          service:
            name: app-nodejs-db-poc-svc
            port:
              number: 8080
