myapp-sn-route-dev.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: UKI_BI_NODEJS
    type: internal-apps-001
  name: app_nodejs_poc-route-dev
  namespace: ns-kpes-gd-kps-dev-wus3
spec:
  host: kpes-dev.zkpw3uspriv.app.kyndryl.net
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: app_nodejs_poc-svc
