myapp-sn-route-prod.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: UKI_BI_NODEJS
    type: internal-apps-001
  name: app-nodejs-poc-route-prod
  namespace: ns-app-nodejs-poc-gd-kps-prd-wus3
spec:
  host: kpes.zkpw3uspriv.app.kyndryl.net
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: app-nodejs-poc-svc
