myapp-sn-route-testqa.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: UKI_BI_NODEJS
    type: internal-apps-001
  name: app-nodejs-poc-route-testqa
  namespace: ns-app-nodejs-poc-gd-kps-testqa-wus3
spec:
  host: kpes-testqa.zkpw3uspriv.app.kyndryl.net
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: app-nodejs-poc-svc
